# evalaudit

./: LICENSE  README.md  example.py  pyproject.toml
evalaudit/: __init__.py  bias.py  invariance.py  reliability.py  report.py
tests/: test_basic.py
