[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "evalaudit"
version = "0.2.0"
description = "Psychometric audits for LLM and human evaluation data: reliability, agreement, bias, and measurement invariance in one call."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [{ name = "Amira Ghazy" }]
dependencies = ["numpy>=1.26", "pandas>=2.1"]

[project.urls]
Homepage = "https://github.com/amira-ghazy/evalaudit"

[tool.setuptools]
packages = ["evalaudit"]
